fix: image spacing

--- a/assets/css/templatemo-onix-digital.css
+++ b/assets/css/templatemo-onix-digital.css
@@ -2035,10 +2035,6 @@ responsive
 }
 
 @media (max-width: 767px) {
-  img {
-    max-width: 320px;
-    height: auto;
-  }
   .main-banner .item .down-buttons {
     display: inline-block;
   }
